manifests/cb/networkpolicy.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: jenkins-agent
  namespace: cb
spec:
  serviceAccountSelector: role == 'jenkins-agent'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: jenkins-master
          to: jenkins-agent
      action: Allow
      source:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
  egress:
    - metadata:
        annotations:
          from: jenkins-agent
          to: jenkins-master
      action: Allow
      destination:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
    - metadata:
        annotations:
          from: jenkins-agent
          to: vpc
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
    - metadata:
        annotations:
          from: jenkins-agent
          to: mgmt
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'mgmt' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 443
          - 80
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cb-application
  namespace: cb
spec:
  types:
    - Egress
  egress:
    - metadata:
        annotations:
          from: cb-application
          to: vpc
      action: Allow
      source:
        serviceAccounts:
          names:
            - tsb-cb
            - default
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
          - 9142
          - 9092
          - 7790
          - 2181
          - 7788
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cb-inter-namespace
  namespace: cb
spec:
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: cb-namespace
          to: cb-namespace
      action: Allow
      source:
        namespaceSelector: projectcalico.org/name == 'cb'
  egress:
    - metadata:
        annotations:
          from: cb-namespace
          to: cb-namespace
      action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'cb'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cb-nginx-ingress
  namespace: cb
spec:
  types:
    - Ingress
  ingress:
    - metadata:
      annotations:
        from: access
        to: nginx
      action: Allow
      source:
        selector: vpc == 'local' && layer == 'access'
        namespaceSelector: global()
